css/mdecl.css
#mainlogo {
    position: absolute;
    top: 4rem;
    left: 65%;
    max-width: 25%;
    max-height: 100%;
}

#smlogo {
    display: none;
}

#homepage {
    padding-top: 0;
}

header img {
    max-height: 48px;
}

header a,
header a:link,
header a:visited {
    text-decoration: none;
    background: inherit;
    color: inherit;
}

article {
    padding-top: 1rem;
}

ol,
ul {
    width: 55%;
}

@media (max-width: 760px) {
    #mainlogo {
        display: none;
    }

    #smlogo {
        display: inline-block;
        max-height: 1em;
        max-width: 1em;
        padding-right: 0.25rem;
    }

    ol,
    ul {
        width: 100%;
    }
}

/*
article {
    margin: auto;
    max-width: 34em;
}

.header {
    padding-top: 1rem;
    text-align: center;
}

.header h1 {
    padding-top: 0;
    margin-top: 1rem;
    font-size: 24pt;
    color: #312783;
}

.header img {
    width: 300px;
}

a,
a:visited,
a:link {
    text-decoration: underscore;
    color: #312783;
}

footer {
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: #312783;
    margin: auto;
    max-width: 34em;
}
footer div {
    font-size: small;
    float: right;
}
*/

